[gd_scene load_steps=25 format=2]

[ext_resource path="res://pck/assets/menu/image-sign-background.png" type="Texture" id=1]
[ext_resource path="res://pck/assets/menu/image-sign-popup.png" type="Texture" id=2]
[ext_resource path="res://pck/assets/menu/icon-sign-login.png" type="Texture" id=3]
[ext_resource path="res://pck/assets/menu/icon-sign-girl.png" type="Texture" id=4]
[ext_resource path="res://pck/assets/menu/icon-button-account.png" type="Texture" id=5]
[ext_resource path="res://pck/assets/common/zawgyi-one.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://pck/assets/common/check-on.png" type="Texture" id=7]
[ext_resource path="res://pck/assets/common/check-off.png" type="Texture" id=8]
[ext_resource path="res://pck/scripts/button.gd" type="Script" id=9]
[ext_resource path="res://pck/scenes/login.gd" type="Script" id=10]
[ext_resource path="res://pck/prefabs/AlertBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://pck/prefabs/Setting.tscn" type="PackedScene" id=12]
[ext_resource path="res://pck/assets/menu/icon-sign-cancel.png" type="Texture" id=13]
[ext_resource path="res://pck/scripts/Blur.gd" type="Script" id=14]

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=8]
resource_name = "In"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("LoginBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.301 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1012, -300 ), Vector2( 1012, 462 ), Vector2( 1012, 462 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Blur:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.164706, 0.164706, 0.164706, 0.0352941 ), Color( 0.164706, 0.164706, 0.164706, 0.301961 ), Color( 0.164706, 0.164706, 0.164706, 0.596078 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Null"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("LoginBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1012, -300 ), Vector2( 1012, -300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Blur:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.164706, 0.164706, 0.164706, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("LoginBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1012, 462 ), Vector2( 1012, -300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Blur:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.164706, 0.164706, 0.164706, 0.596078 ), Color( 0.164706, 0.164706, 0.164706, 0.32549 ), Color( 0.164706, 0.164706, 0.164706, 0.0235294 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LoginBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1012, 462 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Blur:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.164706, 0.164706, 0.164706, 0.596078 ) ]
}

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0784314, 0.121569, 0.223529, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0784314, 0.121569, 0.223529, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0784314, 0.121569, 0.223529, 0 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=7]
size = 30
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 30
use_filter = true
font_data = ExtResource( 6 )

[node name="root" type="Node2D"]
script = ExtResource( 10 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 1000, 450 )
scale = Vector2( 0.868, 0.84 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1000, 536 )
scale = Vector2( 0.525, 0.525 )
texture = ExtResource( 4 )

[node name="Blur" type="Area2D" parent="."]
modulate = Color( 0.164706, 0.164706, 0.164706, 0.596078 )
script = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="Blur_Image" type="Sprite" parent="Blur"]
modulate = Color( 0.0666667, 0.262745, 0.858824, 1 )
position = Vector2( 1000, 450 )
scale = Vector2( 0.868, 0.84 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Blur"]
polygon = PoolVector2Array( 0, 896, 2000, 904, 1992, 0, 1520, 0, 1544, 208, 1528, 328, 1528, 752, 504, 768, 496, 168, 1424, 160, 1504, 120, 1528, 128, 1512, 0, 0, 0 )

[node name="Remember" type="CheckButton" parent="."]
visible = false
margin_left = -476.0
margin_top = 512.0
margin_right = -314.0
margin_bottom = 570.0
custom_icons/off = ExtResource( 8 )
custom_icons/on = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -729.0
margin_top = 516.0
margin_right = -529.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 5 )
text = "Remember"
align = 1
valign = 1

[node name="AlertBox" parent="." instance=ExtResource( 11 )]
position = Vector2( 1000, 980 )
targetY = 840.0

[node name="Setting" parent="." instance=ExtResource( 12 )]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="loginAnimationPlayer" type="AnimationPlayer" parent="."]
anims/In = SubResource( 8 )
anims/Null = SubResource( 11 )
anims/Out = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="AccountButton" type="TextureButton" parent="."]
margin_left = 787.0
margin_top = 691.0
margin_right = 1187.0
margin_bottom = 812.0
texture_normal = ExtResource( 5 )
script = ExtResource( 9 )

[node name="LoginBox" type="Sprite" parent="."]
position = Vector2( 1012, 462 )
texture = ExtResource( 2 )

[node name="TextureRect" type="Panel" parent="LoginBox"]
margin_left = -214.0
margin_top = -148.0
margin_right = 356.0
margin_bottom = -58.0
rect_min_size = Vector2( 580, 90 )
custom_styles/panel = SubResource( 12 )

[node name="Username" type="LineEdit" parent="LoginBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -707.0
margin_top = -444.0
margin_right = -137.0
margin_bottom = -354.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
align = 3
placeholder_text = "Input နာမည္"

[node name="Name" type="Label" parent="LoginBox/Username"]
margin_left = -111.0
margin_top = 23.0
margin_right = -1.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 7 )
text = "နာမည္"

[node name="TextureRect2" type="Panel" parent="LoginBox"]
margin_left = -214.0
margin_top = -49.0
margin_right = 366.0
margin_bottom = 41.0
rect_min_size = Vector2( 580, 90 )
custom_styles/panel = SubResource( 12 )

[node name="Password" type="LineEdit" parent="LoginBox"]
margin_left = -197.0
margin_top = -48.0
margin_right = 379.0
margin_bottom = 42.0
rect_scale = Vector2( 0.989565, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
align = 3
secret = true
placeholder_text = "Input လွ်ိဳ႕ဝွက္နံပါတ္"

[node name="PW" type="Label" parent="LoginBox/Password"]
margin_left = -202.306
margin_top = 32.0
margin_right = -31.3058
margin_bottom = 75.0
custom_fonts/font = SubResource( 6 )
text = "လွ်ိဳ႕ဝွက္နံပါတ္"

[node name="Login" type="TextureButton" parent="LoginBox"]
margin_left = -88.0
margin_top = 117.0
margin_right = 126.0
margin_bottom = 211.0
texture_normal = ExtResource( 3 )
script = ExtResource( 9 )

[node name="Exit" type="TextureButton" parent="LoginBox"]
margin_left = 420.0
margin_top = -284.0
margin_right = 501.0
margin_bottom = -208.0
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Exit Button" type="Sprite" parent="LoginBox/Exit"]
position = Vector2( 37, 37 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 13 )

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="animation_finished" from="loginAnimationPlayer" to="." method="_on_loginAnimationPlayer_animation_finished"]
[connection signal="pressed" from="AccountButton" to="." method="_on_AccountButton_pressed"]
[connection signal="pressed" from="LoginBox/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="LoginBox/Exit" to="." method="_on_Exit_pressed"]
